Fixed some spacing

--- a/src/components/DocSection2/DocSection.module.css
+++ b/src/components/DocSection2/DocSection.module.css
@@ -21,12 +21,3 @@
 .name {
   color: var(--ifm-color-emphasis-800);
 }
-
-.name h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
